# stepik-basic-course-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
step1.intro/: functions.cpp  log2.cpp  quadratic.cpp  recursions.cpp  simple_app.cpp  streams_io.cpp  trim_space.cpp
step2.how_run_apps/: arrays.cpp  dynamic.cpp  matrix.cpp  simple_stack_overflow.cpp
step3.structures_and_classes/: cls.cpp  constructor_copy.cpp  struct.cpp
step4.oop/: calc.cpp  character.cpp  check_equals.cpp  foo.cpp  reload_fun.cpp  visitor.cpp
step5.additional_features/: operator_overload.cpp  operator_overload_2.cpp  operator_overload_4.cpp  operator_overload_5.cpp  smart_point_1.cpp  smart_point_2.cpp
step5.overload/: operator_overload_3.cpp
step6.templates/: tmpClass_3.cpp  tmpFunc_1.cpp  tmpFunc_2.cpp  tmpFunc_3.cpp  tmpFunc_4.cpp  tmpSpec_1.cpp  tmpSpec_2.cpp  tmp_1.cpp  tmp_2.cpp
