cmake_minimum_required(VERSION 3.20.2)
project(stepik)

set(CMAKE_CXX_STANDARD 14)

add_executable(step1_hello_world step1.intro/hello_world.cpp)
add_executable(step1_streams_io step1.intro/streams_io.cpp)
add_executable(step1_functions step1.intro/functions.cpp)
add_executable(step1_simple_app step1.intro/simple_app.cpp)
add_executable(step1_quadratic step1.intro/quadratic.cpp)
add_executable(step1_trim_space step1.intro/trim_space.cpp)
add_executable(step1_log2 step1.intro/log2.cpp)
add_executable(step2_simple_stack_overflow step2.how_run_apps/simple_stack_overflow.cpp)
add_executable(step2_recursions step2.how_run_apps/recursions.cpp)
add_executable(step2_arrays step2.how_run_apps/arrays.cpp)
add_executable(step2_dynamic step2.how_run_apps/dynamic.cpp)
add_executable(step2_matrix step2.how_run_apps/matrix.cpp)
add_executable(step_3_struct step3.structures_and_classes/struct.cpp)
add_executable(step_3_cls step3.structures_and_classes/cls.cpp)
add_executable(step_3_constructor_copy step3.structures_and_classes/constructor_copy.cpp)
add_executable(step_4_foo step4.oop/foo.cpp)
add_executable(step_4_reload_fun step4.oop/reload_fun.cpp)
add_executable(step_4_calc step4.oop/calc.cpp)
add_executable(step_4_visitor step4.oop/visitor.cpp)
add_executable(step_5_overload step5.additional_features/operator_overload.cpp)
add_executable(step_5_overload_2 step5.additional_features/operator_overload_2.cpp)
add_executable(step_5_overload_5 step5.additional_features/operator_overload_5.cpp)
add_executable(step_5_smart_1 step5.additional_features/smart_point_2.cpp)